@@ -3,6 +3,8 @@ TO DO
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
+- maybe make caret status into a JLabel
+
 - perl: escaped regexp separators not highlighted
 
 [error] java.lang.ArrayIndexOutOfBoundsException: 2757:-18
